alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,9 @@
 
 .logo > img {
   width: 20%;
+}
+
+.logo {
   text-align: center;
 }
 
